# real-backend

./: .gitignore  README.md  SCHEMA.md
real-auth/: README.md  package.json  pyproject.toml  serverless.yml
real-auth/real_auth/: clients.py  dispatch.py  enums.py  exceptions.py  handlers.py  logging.py  validate.py  xray.py
real-auth/tests/: test_dispatch.py  test_validate.py
real-lambda-layers/: package.json  pyproject.toml  serverless.yml
real-main/: package.json  pyproject.toml  schema.graphql  serverless.yml  stacks-map.js
real-main/app/: logging.py
real-main/app_tests/: conftest.py
real-main/mapping-templates/: Album.art.request.vtl  Album.postCount.request.vtl  Album.posts.request.vtl  Album.posts.response.vtl  Albums.batchGet.request.vtl  Albums.batchGet.response.vtl  Chat.flagStatus.request.vtl  Chat.messageCount.request.vtl  Chat.messages.request.vtl  Chat.messagesCount.request.vtl  Chat.messagesCount.response.vtl  Chat.users.request.vtl  Chat.users.response.vtl  Chat.usersCount.request.vtl  ChatMemberships.batchGet.request.vtl  ChatMemberships.batchGet.response.vtl  ChatMessage.authorUserId.request.vtl  ChatMessage.flagStatus.request.vtl  ChatMessage.flagStatus.response.vtl  ChatMessage.viewedStatus.request.vtl  ChatMessage.viewedStatus.response.vtl  ChatMessages.batchGet.request.vtl  ChatMessages.batchGet.response.vtl  Chats.batchGet.request.vtl  Chats.batchGet.response.vtl  Comment.flagStatus.request.vtl  Comment.viewedStatus.request.vtl  Comment.viewedStatus.response.vtl  Comments.batchGet.request.vtl  Comments.batchGet.response.vtl  Lambda.response.vtl  Mutation.dynamoServerError.request.vtl  Mutation.triggerCardNotification.request.vtl  Mutation.triggerChatMessageNotification.request.vtl  Mutation.triggerNotification.request.vtl  Mutation.triggerPostNotification.request.vtl  PassThru.response.vtl  Post.album.request.vtl  Post.album.response.vtl  Post.anonymousLikeCount.request.vtl  (+105 more)
real-main/migrations/: block_0_0_move_to_user_block.py  card_0_to_1.py  chat_0_0_fill_messages_count.py  chat_member_0_to_1_fill_in_unviewed_message_count.py  chat_member_1_0_fill_in_messages_unviewed_count.py  chat_message_view_0_delete.py  chat_view_0_2_add_gsiA1_gsiA2.py  chat_view_0_3_delete_gsiK1.py  comment_0_to_1.py  comment_1_0_drop_viewed_by_count.py  comment_view_0_delete.py  feed_0_to_1.py  feed_1_to_2.py  feed_2_0_drop_expires_at.py  feed_2_1_move_to_user_feed.py  feed_2_2_move_to_post_feed.py  feed_2_to_3.py  feed_3_0_copy_to_feed_table.py  feed_3_1_remove_from_main_table.py  flag_0_to_1.py  flag_1_0_move_to_post_flag.py  followedFirstStory_0_to_1.py  followedFirstStory_1_0_move_to_user_follower_first_story.py  following_0_to_1.py  following_1_0_move_to_user_follower.py  like_0_to_1.py  like_1_0_drop_expires_at.py  like_1_1_move_to_post_like.py  match_status_0_0_add_block_chat_expired_at.py  media_object_0_0_generate_64p_thumbnail.py  media_object_0_1_fill_in_is_verified_true.py  media_object_0_2_drop_expires_at.py  media_object_0_3_fill_in_colors.py  media_object_0_to_1.py  media_object_1_to_2.py  media_object_2_0_move_checksum_to_post.py  media_object_2_1_drop_media_status.py  media_object_2_2_move_is_verified_to_post.py  media_object_2_3_move_to_post_image.py  post_0_to_1.py  (+37 more)
real-main/migrations_tests/: conftest.py  test_block_0_0_move_to_user_block.py  (+51 more)
(+423 files in other folders)
