[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 114
target-version = ['py38']
skip-string-normalization = true
exclude = '''
(
  /(
      \.git          # root of the project
    | node_modules
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 114

[tool.poetry]
name = "real-auth"
version = "0.1.0"
description = ""
authors = ["Mike Fogel <mike@real.app>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-xray-sdk = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 114
disable = "C, R, import-error, attribute-defined-outside-init, fixme, no-name-in-module, unused-argument, logging-fstring-interpolation, no-member, super-init-not-called, protected-access, broad-except, unused-import, arguments-differ, redefined-outer-name, unsubscriptable-object"
